--- a/src/style/home.css
+++ b/src/style/home.css
@@ -9,7 +9,7 @@ body {
 }
 
 #app,.container {
-    height: 100%;
+    /*height: 100%;*/
 }
  .main{
     height: calc(100% - 60px);
@@ -20,6 +20,9 @@ body {
     top: 0px;
     bottom: 0px;
     width: 100%;
+}
+.content-wrapper{
+    margin-bottom: 25px;
 }
 
 .container .header {
