--- a/src/style/home.css
+++ b/src/style/home.css
@@ -231,6 +231,10 @@ body {
     .welcome-card{
         width:100%;
     }
+    .el-message-box{
+        margin-top: calc( 50% - 150px) !important;
+        max-width: 96% !important;
+    }
 }
 
 .scrollbar-handle.el-scrollbar > :first-child {
