--- a/src/style/home.css
+++ b/src/style/home.css
@@ -207,14 +207,15 @@ body {
     background: #2d8cf0;
 }
 .content-az{
+    margin-right: 10px;
+    height: calc(100% - 61px);
+    overflow-y: auto;
+}
+.content-az.router-view-withly{
     border: 1px solid #f0f0f0;
     margin-top: 20px;
     margin-left: 5px;
-    margin-right: 10px;
-    height: calc(100% - 61px);
     padding: 5px;
-    
-    overflow-y: auto;
 }
 .content-wrapper .tags{
     padding-right: 20px;
